--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,10 @@ repositories {
     mavenCentral()
 }
 
+task wrapper(type: Wrapper){
+    gradleVersion = '2.12'
+}
+
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
